[package]
name = "rescan"
version = "0.1.0"
authors = ["Nathan Wiebe Neufeldt <wn.nathan@gmail.com>"]
edition = "2021"

[dependencies]
regex = "1"
once_cell = "1"
rescan-macros = { path = "rescan-macros" }
memchr = { version = "2", optional = true }

[features]
default = ["readers"]
readers = ["memchr"]
